# homework-tracker

./: .gitignore  Cargo.toml  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
server/: Cargo.toml
server/src/: main.rs  models.rs
server/src/models/: database.rs
server/tests/: integration_test.rs
src/: main.rs  tests.rs
src/model/: database.rs
src/models/: database.rs
