[package]
name ="homework-app-backend"
version = "0.1.0"
authors = ["Ash Bullock <mondeendeguise@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../common"}

serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["macros"] }
url = { version = "2.3", features = ["serde"] }

diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
